fix translation keys

--- a/Shadowrun4thEdition/Shadowrun4thEdition.html
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.html
@@ -436,7 +436,7 @@
 <option value="Automatics" data-i18n="automatics">Automatics</option>
 <option value="Blades" data-i18n="blades">Blades</option>
 <option value="Clubs" data-i18n="clubs">Clubs</option>
-<option value="Dodge" data-i18n="Dodge">Dodge</option>
+<option value="Dodge" data-i18n="dodge">Dodge</option>
 <option value="Exotic Melee" data-i18n="exoticmelee">Exotic Melee</option>
 <option value="Exotic Range" data-i18n="exoticrange">Exotic Range</option>
 <option value="Heavy Weapons" data-i18n="heavyweapons">Heavy Weapons</option>
@@ -448,17 +448,17 @@
 <option class="option-groups" value="Athletics Group" data-i18n="athleticsgroup">Athletics Group</option>
 <option class="option-groups" value="Outdoors Group" data-i18n="outdoorsgroup">Outdoors Group</option>
 <option class="option-groups" value="Stealth Group" data-i18n="stealthgroup">Stealth Group</option>
-<option value="Climbing" data-i18n="Climbing">Climbing</option>
+<option value="Climbing" data-i18n="climbing">Climbing</option>
 <option value="Disguise" data-i18n="disguise">Disguise</option>
 <option value="Diving" data-i18n="diving">Diving</option>
 <option value="Escape Artist" data-i18n="escapeartist">Escape Artist</option>
 <option value="Flight" data-i18n="flight">Flight</option>
 <option value="Free Fall" data-i18n="freefall">Free Fall</option>
 <option value="Gymnastics" data-i18n="gymnastics">Gymnastics</option>
-<option value="Infiltration" data-i18n="Infiltration">Infiltration</option>
+<option value="infiltration" data-i18n="infiltration">Infiltration</option>
 <option value="Navigation" data-i18n="navigation">Navigation</option>
 <option value="Palming" data-i18n="palming">Palming</option>
-<option value="Parachuting" data-i18n="Parachuting">Parachuting</option>
+<option value="Parachuting" data-i18n="parachuting">Parachuting</option>
 <option value="Perception" data-i18n="perception">Perception</option>
 <option value="Running" data-i18n="running">Running</option>
 <option value="Shadowing" data-i18n="Shadowing">Shadowing</option>
@@ -482,7 +482,7 @@
 <option value="Banishing" data-i18n="banishing">Banishing</option>
 <option value="Binding" data-i18n="binding">Binding</option>
 <option value="Counterspelling" data-i18n="counterspelling">Counterspelling</option>
-<option value="Enchanting" data-i18n="Enchanting">Enchanting</option>
+<option value="Enchanting" data-i18n="enchanting">Enchanting</option>
 <option value="Ritual Spellcasting" data-i18n="ritualspellcasting">Ritual Spellcasting</option>
 <option value="Spellcasting" data-i18n="spellcasting">Spellcasting</option>
 <option value="Summoning" data-i18n="summoning">Summoning</option>
@@ -494,8 +494,8 @@
 <option class="option-headers" disabled="true" data-i18n="technicalskills">Technical Skills</option>
 <option class="option-groups" value="Biotech Group" data-i18n="biotechgroup">Biotech Group</option>
 <option class="option-groups" value="Cracking Group" data-i18n="crackinggroup">Cracking Group</option>
-<option class="option-groups" value="Electronics Group" data-i18n="Electronics Group">Electronics Group</option>
-<option class="option-groups" value="Mechanical Group" data-i18n="Mechanical Group">Mechanical Group</option>
+<option class="option-groups" value="Electronics Group" data-i18n="electronicsgroup">Electronics Group</option>
+<option class="option-groups" value="Mechanical Group" data-i18n="mechanicalgroup">Mechanical Group</option>
 <option value="Aeronautics Mechanic" data-i18n="aeronauticsmechanic">Aeronautics Mechanic</option>
 <option value="Armorer" data-i18n="armorer">Armorer</option>
 <option value="Artisan" data-i18n="artisan">Artisan</option>
@@ -504,9 +504,9 @@
 <option value="Computer" data-i18n="computer">Computer</option>
 <option value="Cybercombat" data-i18n="cybercombat">Cybercombat</option>
 <option value="Cybertechnology" data-i18n="cybertechnology">Cybertechnology</option>
-<option value="Data Search" data-i18n="Data Search">Data Search</option>
+<option value="Data Search" data-i18n="data search">Data Search</option>
 <option value="Demolitions" data-i18n="demolitions">Demolitions</option>
-<option value="Electronic Warfare" data-i18n="Electronics Group">Electronic Warfare</option>
+<option value="Electronic Warfare" data-i18n="electronicwarfare">Electronic Warfare</option>
 <option value="First Aid" data-i18n="firstaid">First Aid</option>
 <option value="Forgery" data-i18n="forgery">Forgery</option>
 <option value="Hacking" data-i18n="hacking">Hacking</option>
@@ -519,7 +519,7 @@
 <option value="Gunnery" data-i18n="gunnery">Gunnery</option>
 <option value="Pilot Aerospace" data-i18n="pilotaerospace">Pilot Aerospace</option>
 <option value="Pilot Aircraft" data-i18n="pilotaircraft">Pilot Aircraft</option>
-<option value="Pilot Anthroform" data-i18n="Pilot Anthroform">Pilot Anthroform</option>
+<option value="Pilot Anthroform" data-i18n="pilotanthroform">Pilot Anthroform</option>
 <option value="Pilot Exotic Vehicle" data-i18n="pilotexoticvehicle">Pilot Exotic Vehicle</option>
 <option value="Pilot Ground Craft" data-i18n="pilotgroundcraft">Pilot Ground Craft</option>
 <option value="Pilot Watercraft" data-i18n="pilotwatercraft">Pilot Watercraft</option>
@@ -1037,9 +1037,9 @@
         <div class="pc-box medium-box">
           <div class="rows repeating-container">
             <div class="row-long headers">
-              <h2 data-i18n="armor">Armor</h2>
+              <h2 data-i18n="armor">armor</h2>
               <h2 data-i18n="ballistic">ballistic</h2>
-              <h2 data-i18n="impact">Impact</h2>
+              <h2 data-i18n="impact">impact</h2>
             </div>
             <fieldset class="repeating_armor">
               <input class="flag-primary" name="attr_primary" type="hidden" value=""/>
@@ -2302,15 +2302,15 @@
     <div class="column">
       <h1 class="settings" data-i18n="modifier">Modifier</h1>
       <div class="rows">
-        <button data-i18n="Ballistic" name="roll_Ballistic" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{Ballistic}}}{{base=base}}{{dice=[[((@{ballistic}+@{soak})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}">Ballistic</button>
-        <label class="settings" data-i18n-title="Ballistic">
-          <input name="attr_Ballistic" placeholder="9" title="@{ballistic}" type="number" value="0"/>
+        <button data-i18n="ballistic" name="roll_ballistic" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{ballistic}}}{{base=base}}{{dice=[[((@{ballistic}+@{soak})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}">ballistic</button>
+        <label class="settings" data-i18n-title="ballistic">
+          <input name="attr_ballistic" placeholder="9" title="@{ballistic}" type="number" value="0"/>
         </label>
       </div>
       <div class="rows">
-        <button data-i18n="Impact" name="roll_Impact" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{Impact}}}{{base=base}}{{dice=[[((@{impact}+@{soak})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}">Impact</button>
-        <label class="settings" data-i18n-title="Impact">
-          <input name="attr_Impact" placeholder="9" title="@{impact}" type="number" value="0"/>
+        <button data-i18n="impact" name="roll_impact" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{impact}}}{{base=base}}{{dice=[[((@{impact}+@{soak})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}">impact</button>
+        <label class="settings" data-i18n-title="impact">
+          <input name="attr_impact" placeholder="9" title="@{impact}" type="number" value="0"/>
         </label>
       </div>
       <div class="rows">
@@ -2464,7 +2464,7 @@
 <option value="Automatics" data-i18n="automatics">Automatics</option>
 <option value="Blades" data-i18n="blades">Blades</option>
 <option value="Clubs" data-i18n="clubs">Clubs</option>
-<option value="Dodge" data-i18n="Dodge">Dodge</option>
+<option value="Dodge" data-i18n="dodge">Dodge</option>
 <option value="Exotic Melee" data-i18n="exoticmelee">Exotic Melee</option>
 <option value="Exotic Range" data-i18n="exoticrange">Exotic Range</option>
 <option value="Heavy Weapons" data-i18n="heavyweapons">Heavy Weapons</option>
@@ -2476,17 +2476,17 @@
 <option class="option-groups" value="Athletics Group" data-i18n="athleticsgroup">Athletics Group</option>
 <option class="option-groups" value="Outdoors Group" data-i18n="outdoorsgroup">Outdoors Group</option>
 <option class="option-groups" value="Stealth Group" data-i18n="stealthgroup">Stealth Group</option>
-<option value="Climbing" data-i18n="Climbing">Climbing</option>
+<option value="Climbing" data-i18n="climbing">Climbing</option>
 <option value="Disguise" data-i18n="disguise">Disguise</option>
 <option value="Diving" data-i18n="diving">Diving</option>
 <option value="Escape Artist" data-i18n="escapeartist">Escape Artist</option>
 <option value="Flight" data-i18n="flight">Flight</option>
 <option value="Free Fall" data-i18n="freefall">Free Fall</option>
 <option value="Gymnastics" data-i18n="gymnastics">Gymnastics</option>
-<option value="Infiltration" data-i18n="Infiltration">Infiltration</option>
+<option value="infiltration" data-i18n="infiltration">Infiltration</option>
 <option value="Navigation" data-i18n="navigation">Navigation</option>
 <option value="Palming" data-i18n="palming">Palming</option>
-<option value="Parachuting" data-i18n="Parachuting">Parachuting</option>
+<option value="Parachuting" data-i18n="parachuting">Parachuting</option>
 <option value="Perception" data-i18n="perception">Perception</option>
 <option value="Running" data-i18n="running">Running</option>
 <option value="Shadowing" data-i18n="Shadowing">Shadowing</option>
@@ -2510,7 +2510,7 @@
 <option value="Banishing" data-i18n="banishing">Banishing</option>
 <option value="Binding" data-i18n="binding">Binding</option>
 <option value="Counterspelling" data-i18n="counterspelling">Counterspelling</option>
-<option value="Enchanting" data-i18n="Enchanting">Enchanting</option>
+<option value="Enchanting" data-i18n="enchanting">Enchanting</option>
 <option value="Ritual Spellcasting" data-i18n="ritualspellcasting">Ritual Spellcasting</option>
 <option value="Spellcasting" data-i18n="spellcasting">Spellcasting</option>
 <option value="Summoning" data-i18n="summoning">Summoning</option>
@@ -2522,8 +2522,8 @@
 <option class="option-headers" disabled="true" data-i18n="technicalskills">Technical Skills</option>
 <option class="option-groups" value="Biotech Group" data-i18n="biotechgroup">Biotech Group</option>
 <option class="option-groups" value="Cracking Group" data-i18n="crackinggroup">Cracking Group</option>
-<option class="option-groups" value="Electronics Group" data-i18n="Electronics Group">Electronics Group</option>
-<option class="option-groups" value="Mechanical Group" data-i18n="Mechanical Group">Mechanical Group</option>
+<option class="option-groups" value="Electronics Group" data-i18n="electronicsgroup">Electronics Group</option>
+<option class="option-groups" value="Mechanical Group" data-i18n="mechanicalgroup">Mechanical Group</option>
 <option value="Aeronautics Mechanic" data-i18n="aeronauticsmechanic">Aeronautics Mechanic</option>
 <option value="Armorer" data-i18n="armorer">Armorer</option>
 <option value="Artisan" data-i18n="artisan">Artisan</option>
@@ -2532,9 +2532,9 @@
 <option value="Computer" data-i18n="computer">Computer</option>
 <option value="Cybercombat" data-i18n="cybercombat">Cybercombat</option>
 <option value="Cybertechnology" data-i18n="cybertechnology">Cybertechnology</option>
-<option value="Data Search" data-i18n="Data Search">Data Search</option>
+<option value="Data Search" data-i18n="data search">Data Search</option>
 <option value="Demolitions" data-i18n="demolitions">Demolitions</option>
-<option value="Electronic Warfare" data-i18n="Electronics Group">Electronic Warfare</option>
+<option value="Electronic Warfare" data-i18n="electronicwarfare">Electronic Warfare</option>
 <option value="First Aid" data-i18n="firstaid">First Aid</option>
 <option value="Forgery" data-i18n="forgery">Forgery</option>
 <option value="Hacking" data-i18n="hacking">Hacking</option>
@@ -2547,7 +2547,7 @@
 <option value="Gunnery" data-i18n="gunnery">Gunnery</option>
 <option value="Pilot Aerospace" data-i18n="pilotaerospace">Pilot Aerospace</option>
 <option value="Pilot Aircraft" data-i18n="pilotaircraft">Pilot Aircraft</option>
-<option value="Pilot Anthroform" data-i18n="Pilot Anthroform">Pilot Anthroform</option>
+<option value="Pilot Anthroform" data-i18n="pilotanthroform">Pilot Anthroform</option>
 <option value="Pilot Exotic Vehicle" data-i18n="pilotexoticvehicle">Pilot Exotic Vehicle</option>
 <option value="Pilot Ground Craft" data-i18n="pilotgroundcraft">Pilot Ground Craft</option>
 <option value="Pilot Watercraft" data-i18n="pilotwatercraft">Pilot Watercraft</option>
