--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -3695,7 +3695,7 @@
 						<div class="cell col2"><input type="number" step="1" name="attr_ad_dodge_skill_mod" value="0" title="Macro name: ad_dodge_skill_mod" /></div>
 						<div class="cell col3"><input type="text" name="attr_ad_dodge_skill_final" value="@{current_dodge} + @{ad_dodge_skill_mod}" disabled="disabled" title="Macro name: ad_dodge_skill_final" /></div>
 						<div class="cell col4">
-							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Defense Roll}} {{defenseType=[[1]]}} {{activeDefense=[[1]]}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=Dodge}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{ad_dodge_skill_final} + @{modifier}]]}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsDodge" />
+							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Defense Roll}} {{defenseType=[[1]]}} {{activeDefense=[[1]]}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=Dodge}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{ad_dodge_skill_final} + @{modifier}]]}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}} {{showNotes=[[@{defense_dodge_show_notes}]]}} {{notes=@{defense_dodge_notes}}} {{customSuccessNote=@{defense_dodge_success_note}}} {{customCriticalSuccessNote=@{defense_dodge_critical_success_note}}} {{customFailNote=@{defense_dodge_fail_note}}} {{customCriticalFailNote=@{defense_dodge_critical_fail_note}}}" name="roll_vsDodge" />
 						</div>
 					</div> <!-- .sheet-row -->
 
@@ -3838,7 +3838,7 @@
 						<div class="cell col2"><input type="number" step="1" name="attr_ad_dodge_retreat_skill_mod" value="0" title="Macro name: ad_dodge_retreat_skill_mod" /></div>
 						<div class="cell col3"><input type="text" name="attr_ad_dodge_retreat_skill_final" value="@{current_dodge} + 3 + @{ad_dodge_retreat_skill_mod}" disabled="disabled" title="Macro name: ad_dodge_retreat_skill_final" /></div>
 						<div class="cell col4">
-							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Defense Roll}} {{defenseType=[[1]]}} {{activeDefense=[[1]]}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=Dodge and Retreat}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{ad_dodge_retreat_skill_final} + @{modifier}]]}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsDodgeRetreat" />
+							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Defense Roll}} {{defenseType=[[1]]}} {{activeDefense=[[1]]}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=Dodge and Retreat}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{ad_dodge_retreat_skill_final} + @{modifier}]]}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}} {{showNotes=[[@{defense_dodge_retreat_show_notes}]]}} {{notes=@{defense_dodge_retreat_notes}}} {{customSuccessNote=@{defense_dodge_retreat_success_note}}} {{customCriticalSuccessNote=@{defense_dodge_retreat_critical_success_note}}} {{customFailNote=@{defense_dodge_retreat_fail_note}}} {{customCriticalFailNote=@{defense_dodge_retreat_critical_fail_note}}}" name="roll_vsDodgeRetreat" />
 						</div>
 					</div> <!-- .sheet-row -->
 
@@ -3979,7 +3979,7 @@
 						<div class="cell col2"><input type="number" step="1" name="attr_ad_dodge_drop_skill_mod" value="0" title="Macro name: ad_dodge_drop_skill_mod" /></div>
 						<div class="cell col3"><input type="text" name="attr_ad_dodge_drop_skill_final" value="@{current_dodge} + 3 + @{ad_dodge_drop_skill_mod}" disabled="disabled" title="Macro name: ad_dodge_drop_skill_final" /></div>
 						<div class="cell col4">
-							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Defense Roll}} {{defenseType=[[1]]}} {{activeDefense=[[1]]}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=Dodge and Drop}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{ad_dodge_drop_skill_final} + @{modifier}]]}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsDodgeDrop" />
+							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Defense Roll}} {{defenseType=[[1]]}} {{activeDefense=[[1]]}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=Dodge and Drop}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{ad_dodge_drop_skill_final} + @{modifier}]]}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}} {{showNotes=[[@{defense_dodge_drop_show_notes}]]}} {{notes=@{defense_dodge_drop_notes}}} {{customSuccessNote=@{defense_dodge_drop_success_note}}} {{customCriticalSuccessNote=@{defense_dodge_drop_critical_success_note}}} {{customFailNote=@{defense_dodge_drop_fail_note}}} {{customCriticalFailNote=@{defense_dodge_drop_critical_fail_note}}}" name="roll_vsDodgeDrop" />
 						</div>
 					</div> <!-- .sheet-row -->
 
