- fixed potential css encoding issue - added missing event in sheet workers

--- a/Fading Suns v2.75/Fading_Suns_v2.75.html
+++ b/Fading Suns v2.75/Fading_Suns_v2.75.html
@@ -1266,7 +1266,7 @@
         });
     });
 
-    on("clicked:repeating_creativeskills:creativeskill-selectskill", function (eventInfo) {
+    on("clicked:repeating_creativeskills:creativeskill-selectskill clicked:repeating_loreskills:loreskill-selectskill", function (eventInfo) {
         if (eventInfo.sourceAttribute.endsWith("-selectskill")) {
             // roll20 communicates a sourceAttribute with caps in it, but will store it in lowercase after this callback....
             let itemRoot = eventInfo.sourceAttribute.replace("-selectskill","").toLowerCase();
@@ -1281,7 +1281,7 @@
         }
     });
 
-    on("change:repeating_creativeskills", function (eventInfo) {
+    on("change:repeating_creativeskills change:repeating_loreskills", function (eventInfo) {
         getAttrs([ "selected_skill_repeatroot" ], function (values) {
             if (eventInfo.sourceAttribute.endsWith("_name")) {
                 if (eventInfo.sourceAttribute === values.selected_skill_repeatroot + "_name") {
@@ -1303,8 +1303,6 @@
             }
         });
     });
-
-
 
 </script>
 <!-- SHEET WORKERS DEFINED -->
