finsihed translation layout tweaks

--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -487,8 +487,8 @@
                                 <option value="0" data-i18n="melee" selected>Melee</option>
                                 <option value="1" data-i18n="ranged">Ranged</option>
                             </select>
-                            <input class="weapons-box28 input" name="attr_weapon_base_total" type="text" value="0" data-i18n-title="weapon-type-base" title="BASE dice as per weapon/skill type. @{repeating_weapons_$X_weapon_base_total}" readonly />
-                            <input class="weapons-box29 input" name="attr_weapon_skill_value" type="text" value="0" data-i18n-title="weapon-type-skill" title="SKILL dice as per weapon/skill type. @{repeating_weapons_$X_weapon_skill_value}" readonly />
+                            <span class="weapons-box28 readonly" name="attr_weapon_base_total" value="0" data-i18n-title="weapon-type-base" title="BASE dice as per weapon/skill type. @{repeating_weapons_$X_weapon_base_total}">0</span>
+                            <span class="weapons-box29 readonly" name="attr_weapon_skill_value" value="0" data-i18n-title="weapon-type-skill" title="SKILL dice as per weapon/skill type. @{repeating_weapons_$X_weapon_skill_value}">0</span>
                             <select class="weapons-box30 input" name="attr_weapon_skill_misc" data-i18n-title="weapon-skill-misc" title="Miscellaneous attack modifier (adjusts SKILL dice). @{repeating_weapons_$X_weapon_skill_misc}">
 								<option value="6">+6</option>
 								<option value="5">+5</option>
@@ -504,7 +504,7 @@
                                 <option value="-5">-5</option>
                                 <option value="-6">-6</option>
                             </select>
-                            <input class="weapons-box31 input" name="attr_weapon_skill_total" type="text" value="0" data-i18n-title="weapon-skill-total" title="Total Skill dice included with the attack. @{repeating_weapons_$X_weapon_skill_total}" readonly />
+                            <span class="weapons-box31 readonly" name="attr_weapon_skill_total" value="0" data-i18n-title="weapon-skill-total" title="Total Skill dice included with the attack. @{repeating_weapons_$X_weapon_skill_total}">0</span>
 
                             <div class="weapons-box32"></div>
 
@@ -547,7 +547,7 @@
                             <option value="1">+1</option>
                             <option value="0" selected>+0</option>
                         </select>
-                            <input class="weapons-box36 input" name="attr_weapon_bonus_total" type="text" value="0" data-i18n-title="weapon-bonus-total" title="Total GEAR dice included with the attack. @{repeating_weapons_$X_weapon_bonus_total}" readonly />
+                            <span class="weapons-box36 readonly" name="attr_weapon_bonus_total" value="0" data-i18n-title="weapon-bonus-total" title="Total GEAR dice included with the attack. @{repeating_weapons_$X_weapon_bonus_total}">0</span>
                             <div class="weapons-box37"></div>
                             <input class="weapons-box38 input" type="checkbox" name="attr_weapon_artifact_die_ocho" value="1" data-i18n-title="mighty" title="Mighty @{repeating_weapons_$X_weapon_artifact_die_ocho}">
                             <input class="weapons-box39 input" type="checkbox" name="attr_weapon_artifact_die_eight" value="1" data-i18n-title="mighty" title="Mighty @{repeating_weapons_$X_weapon_artifact_die_eight}">
@@ -584,7 +584,7 @@
                                 <option value="-5">-5</option>
                                 <option value="-6">-6</option>
                             </select>
-                            <input class="weapons-box45 input" name="attr_weapon_damage_total" type="text" value="0" data-i18n-title="weapon-damage-total" title="Total damage included with the attack. @{repeating_weapons_$X_weapon_damage_total}" readonly />
+                            <span class="weapons-box45 readonly" name="attr_weapon_damage_total" value="0" data-i18n-title="weapon-damage-total" title="Total damage included with the attack. @{repeating_weapons_$X_weapon_damage_total}">0</span>
 <!-- expand 2nd row -->
                             <input class="expand" type="checkbox" name="attr_expand" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
 <!-- 2nd row -->
@@ -1929,7 +1929,7 @@
                             <option value="-5">-5</option>
                             <option value="-6">-6</option>
                         </select>
-                        <input class="armor-box5 input-number" type="text" name="attr_armor1_ar" value="0" data-i18n-title="armor1-bonus-total" title="Total GEAR and SKILL dice included for armor1. @{armor1_ar}" readonly />
+                        <span class="armor-box5 readonly" name="attr_armor1_ar" value="0" data-i18n-title="armor1-bonus-total" title="Total GEAR and SKILL dice included for armor1. @{armor1_ar}">0</span>
 
                         <input class="armor-box6 input" type="checkbox" name="attr_armor1_artifact_die_ocho" value="1" data-i18n-title="mighty" title="Mighty">
                         <input class="armor-box7 input" type="checkbox" name="attr_armor1_artifact_die_eight" value="1" data-i18n-title="mighty" title="Mighty">
@@ -1977,7 +1977,7 @@
                                 <option value="-5">-5</option>
                                 <option value="-6">-6</option>
                             </select>
-                        <input class="armor-box5 input-number" type="text" name="attr_armor2_ar" value="0" data-i18n-title="armor2-bonus-total" title="Total GEAR and SKILL dice included for armor2. @{armor2_ar}" readonly />
+                        <span class="armor-box5 readonly" name="attr_armor2_ar" value="0" data-i18n-title="armor2-bonus-total" title="Total GEAR and SKILL dice included for armor2. @{armor2_ar}">0</span>
                         <input class="armor-box6 input" type="checkbox" name="attr_armor2_artifact_die_ocho" value="1" data-i18n-title="mighty" title="Mighty">
                         <input class="armor-box7 input" type="checkbox" name="attr_armor2_artifact_die_eight" value="1" data-i18n-title="mighty" title="Mighty">
                         <input class="armor-box8 input" type="checkbox" name="attr_armor2_artifact_die_ten" value="1" data-i18n-title="epic" title="Epic">
@@ -2042,8 +2042,8 @@
                         <button class="shield-box1 roll-button" type="action" name="act_shield-shove-roll" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice.">t</button>
                         <button class="shield-box2 roll-button" type="action" name="act_shield-roll" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice.">t</button>
                         <input class="shield-box3 input" type="text" name="attr_shield1_name" value="" title="@{shield1_name}" data-i18n-placeholder="name" placeholder="name" />
-                        <input class="shield-box4 input" name="attr_strength_total" type="text" value="0" title="@{strength_total}" readonly />
-                        <input class="shield-box5 input" name="attr_melee" type="text" value="0" title="@{melee}" readonly />                        
+                        <span class="shield-box4 readonly" name="attr_strength_total" value="0" title="@{strength_total}">0</span>
+                        <span class="shield-box5 readonly" name="attr_melee" value="0" title="@{melee}">0</span>
                         <input class="shield-box6 input-number" type="number" name="attr_shield1_bonus" value="0" min="0" data-i18n-title="shield-bonus" title="Record the shield's CURRENT bonus up to MAX (adjusts GEAR dice) @{shield1_bonus}" />
                         <input class="shield-box7 input-number" type="number" name="attr_shield1_bonus_max" value="0" min="0" data-i18n-title="shield-bonus-max" title="Record the shield's UNDAMAGED bonus. @{shield1_bonus_max}" />
                         <select class="shield-box8 input" name="attr_shield1_bonus_misc" data-i18n-title="shield-bonus-misc" title="Miscellaneous bonus modifier (adjusts SKILL dice). @{shield1_bonus_misc}">
@@ -2061,7 +2061,7 @@
                             <option value="-5">-5</option>
                             <option value="-6">-6</option>
                         </select>
-                        <input class="shield-box9 input-number" type="text" name="attr_shield1_bonus_total" value="0" data-i18n-title="shield-bonus-total" title="Total BASE, GEAR, and SKILL dice included for Parry|Shove. @{shield1_bonus_total}" readonly />	
+                        <span class="shield-box9 readonly" name="attr_shield1_bonus_total" value="0" data-i18n-title="shield-bonus-total" title="Total BASE, GEAR, and SKILL dice included for Parry|Shove. @{shield1_bonus_total}">0</span>
                         <input class="shield-box10 input" type="checkbox" name="attr_shield1_artifact_die_ocho" value="1" data-i18n-title="mighty" title="Mighty">
                         <input class="shield-box11 input" type="checkbox" name="attr_shield1_artifact_die_eight" value="1" data-i18n-title="mighty" title="Mighty">
                         <input class="shield-box12 input" type="checkbox" name="attr_shield1_artifact_die_ten" value="1" data-i18n-title="epic" title="Epic">
@@ -2249,7 +2249,7 @@
                             <input class="beasts-box2 input-number" type="number" name="attr_beast_strength" value="0" min="0" title="@{repeating_beasts_$X_beast_strength}" />
                             <input class="beasts-box3 input-number" type="number" name="attr_beast_agility" value="0" min="0" title="@{repeating_beasts_$X_beast_agility}" />
                             <input class="beasts-box4 input" type="checkbox" name="attr_beast_mounted" value="1" title="@{repeating_beasts_$X_beast_mounted}" />
-                            <input class="beasts-box5 input input-number-center" type="text" name="attr_beast_carry" value="0" title="@{repeating_beasts_$X_beast_carry} = mount_strength x2, unmounted x4" readonly />
+                            <span class="beasts-box5 readonly" name="attr_beast_carry" value="0" title="@{repeating_beasts_$X_beast_carry} = mount_strength x2, unmounted x4">0</span>
                             <input class="beasts-box6 input input-number-center" type="number" name="attr_beast_encumbrance" title="@{repeating_beasts_$X_beast_encumbrance}" value="0" min="0" step="0.5" />
                             <textarea class="beasts-box7 input-textarea" name="attr_beast_notes" data-i18n-placeholder="gear-notes" placeholder="Gear/Notes" title="@{repeating_beasts_$X_beast_notes}"></textarea>
                         </div>
@@ -2412,8 +2412,8 @@
                 <div class="stronghold-hirelings-box5">
                     <div class="stronghold-hirelings-grid">
                         <span class="stronghold-hirelings-box2 label" data-i18n="total"
-                            style="margin-top: 6px 0 0 10px;">Total</span>
-                        <input class="stronghold-hirelings-box3 center" name="attr_hirelings_cost" type="number" value="0" title="@{hirelings_cost}" style="margin-bottom: 5px;" readonly />
+                            style="margin: 6px 0 0 10px;">Total</span>
+                        <span class="stronghold-hirelings-box3 center readonly" name="attr_hirelings_cost" value="0" title="@{hirelings_cost}" style="margin-bottom: 5px;">0</span>
                     </div>
                 </div>
             </div>
