fixed whisper option on notes rolls

--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -1,4 +1,4 @@
-<!--3/28/20 set sheet version manually with currentVersion in sheetworkers-->
+<!--3/29/20 set sheet version manually with currentVersion in sheetworkers-->
 <input type="hidden" name="attr_version" value="0" />
 <!-- ADDED recalc checkbox to force sheet worker events. temp unhide for testing purposes-->
 <input class="hidden" name="attr_recalc1" type="checkbox" />
@@ -11,7 +11,6 @@
 
 <div class="logo">
     <span class="sheet-logo-text" data-i18n="logo-forbidden-lands">FORBIDDEN LANDS</span>
-    <img alt="Forbidden Lands" src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Forbidden_Lands/images/logo.png" style="width: 45%;margin: -1% 0 2% 0; display:none;">
 </div>
 
 <div class="wrapper tab-content character">
@@ -20,12 +19,13 @@
     <span class="announcements-show toggle-dice-only toggle-monster-only" name="attr_version">&nbsp;</span>
     <div class="announcements toggle-dice-only toggle-monster-only">
         <h3 data-i18n="latest-announcements">Latest Announcements</h3>
-        <span class="footer">3/28/20</span>
+        <span class="footer">3/29/20</span>
         <ol style="margin: 0 2em 0 2em; padding: 0 1em 0 3em;">
             <span>v1.65</span>
             <li>Added Misc Gear modifier to Skills.</li>
-            <li>Attributes are now "rollable"</li>
-            <li>Added Swedish translation.  Thank you Magnus M.</li>
+            <li>All Attributes are now "rollable".</li>
+            <li>Replaced the repeating row text "+Add" and "Modify" with simple icons.</li>
+            <li>Swedish translations have been added. Thank you Magnus M.</li>
         </ol>
         <br>
         <input type="checkbox" class="announcements-older-show" name="attr_show_announcements_old" value="1" data-i18n-title="old-announcements" />
@@ -336,7 +336,7 @@
         <div class="box toggle-dice-only toggle-monster-only character-details">
             <div class="details-grid">
                 <div class="details-box1">
-                    <button class="roll-button-textonly" type="roll" name="roll_pride" title="%{roll_pride}" value="@{whisper_option} &{template:forbiddenlands} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=^{pride-roll}}} {{subtitle=@{pride}}} {{artifact-die-twelve=[[1]] }} {{artifact-roll-twelve=[[1d12]] }}">
+                    <button class="roll-button-textonly" type="roll" name="roll_pride" title="%{roll_pride}" style="width: 100%;height: 1.2em;" value="@{whisper_option} &{template:forbiddenlands} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=^{pride-roll}}} {{subtitle=@{pride}}} {{artifact-die-twelve=[[1]] }} {{artifact-roll-twelve=[[1d12]] }}">
                         <span class="label" data-i18n="pride">Pride</span>
                     </button>
                 </div>
@@ -356,7 +356,7 @@
                     </select>
                 </div>
                 <div class="details-box7">
-                    <button type="action" name="act_reputation-roll" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice." data-i18n="reputation">Reputation</button>
+                    <button type="action" name="act_reputation-roll" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice." data-i18n="reputation" style="height: 1.85em;">Reputation</button>
                 </div>
                 <div class="details-box8">
                     <select class="input" name="attr_reputation" data-i18n-title="reputation-bonus"  title="How well known are you? @{reputation}">
@@ -2325,7 +2325,7 @@
                     <fieldset class="repeating_notes">
                         <div class="notes-grid">
                             <div class="notes-box3">
-                                <button class="roll-button" type="roll" name="roll_notes" title="%{repeating_notes_$X_notes}" style="padding: 0;"  value="&amp;{template:forbiddenlands} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=^{notes}}} {{subtitle=@{note_name}}} {{free-text=@{note_description}}}"></button>
+                                <button class="roll-button" type="roll" name="roll_notes" title="%{repeating_notes_$X_notes}" style="padding: 0;"  value="@{whisper_option} &{template:forbiddenlands} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=^{notes}}} {{subtitle=@{note_name}}} {{free-text=@{note_description}}}"></button>
                             </div>
                             <div class="notes-box4">
                                 <input class="input-number" type="text" name="attr_note_name" value="" title="@{repeating_notes_$X_note_name}" data-i18n-placeholder="note-name" placeholder="Note's name" />
