--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -24,6 +24,7 @@
             <span>v1.65</span>
             <li>Added Misc Gear modifier to Skills.</li>
             <li>All Attributes are now "rollable".</li>
+            <li>Fixed missing whisper option for notes rolls.</li>
             <li>Replaced the repeating row text "+Add" and "Modify" with simple icons.</li>
             <li>Swedish translations have been added. Thank you Magnus M.</li>
         </ol>
