--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -26,15 +26,15 @@
 				<ul>
 					<li>Changed width of Weapon and Damage Notes fields, under Melee and Raged Attacks, to be more readable – Cosmetic Only.</li>
 					<li>
-						General Tab. Remove checkbox for whispering Perception. Default behavior is only player and game master can see the roll. 
-						There's method to roll so GM only sees the roll by the player.
+						General Tab. Removed checkbox for whispering Perception. Current default behavior for whisper is player and game master can see the roll. 
+						There's no method that only the GM sees the roll by the player.
 					</li>
 					<li>
 						Combat Tab. Updated Active Defenses to have the same layout as Skills and Spells.
 						Active Defenses will be prepopulated with success/fail notes based on the Defense Type.
 					</li>
 					<li>
-						Options Tab. There text boxes for editing the default success/fail notes for Active Defenses.
+						Options Tab. There are text boxes for editing the default success/fail notes for Active Defenses.
 					</li>
 				</ul>
 				<label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
@@ -6142,15 +6142,15 @@ If a single rapid-fire attack, dodge <i>all</i> hits. See B375.</textarea>
 	<ul>
 		<li>Changed width of Weapon and Damage Notes fields, under Melee and Raged Attacks, to be more readable – Cosmetic Only.</li>
 		<li>
-			General Tab. Remove checkbox for whispering Perception. Default behavior is only player and game master can see the roll. 
-			There's method to roll so GM only sees the roll by the player.
+			General Tab. Removed checkbox for whispering Perception. Current default behavior for whisper is player and game master can see the roll. 
+			There's no method that only the GM sees the roll by the player.
 		</li>
 		<li>
 			Combat Tab. Updated Active Defenses to have the same layout as Skills and Spells.
 			Active Defenses will be prepopulated with success/fail notes based on the Defense Type.
 		</li>
 		<li>
-			Options Tab. There text boxes for editing the default success/fail notes for Active Defenses.
+			Options Tab. There are text boxes for editing the default success/fail notes for Active Defenses.
 		</li>
 	</ul>
 
